static/psi4manual/4.0b2/_sources/autodoc_testsuite.txt

=============================================   ============
Input File                                      Description 
=============================================   ============
:srcsample:`scf2`                               RI-SCF cc-pVTZ energy of water, with Z-matrix input and cc-pVTZ-RI auxilliary basis.
:srcsample:`cc22`                               ROHF-EOM-CCSD/DZ on the lowest two states of each irrep in :math:`^{3}B_1` CH2.
:srcsample:`mcscf2`                             TCSCF cc-pVDZ  energy of asymmetrically displaced ozone, with Z-matrix input.
:srcsample:`min\_input`                         This checks that all energy methods can run with a minimal input and set symmetry.
:srcsample:`cc25`                               Single point gradient of 1-2B2 state of H2O+ with EOM-CCSD
:srcsample:`fd-gradient`                        SCF STO-3G finite-difference tests
:srcsample:`scf6`                               Tests RHF/ROHF/UHF SCF gradients
:srcsample:`psimrcc-ccsd\_t-3`                  Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`mcscf1`                             ROHF 6-31G** energy of the :math:`^{3}B_1`  state of CH2, with Z-matrix input. The occupations are specified explicitly.
:srcsample:`sapt5`                              SAPT0 aug-cc-pVTZ computation of the charge transfer energy of the water dimer.
:srcsample:`adc2`                               ADC/aug-cc-pVDZ on two water molecules that are distant from 1000 angstroms from each other
:srcsample:`cc40`                               RHF-CC2-LR/cc-pVDZ optical rotation of H2O2.  gauge = length, omega = (589 355 nm)
:srcsample:`dcft2`                              DCFT-06 calculation for the He dimer. This performs a two-step update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the MO Basis.
:srcsample:`cc32`                               CC3/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`tu1-h2o-energy`                     Sample HF/cc-pVDZ H2O computation
:srcsample:`dcft4`                              DCFT calculation for the HF+ using DCFT-06 functional. This performs both two-step and simultaneous update of the orbitals and cumulant using DIIS extrapolation. Four-virtual integrals are first handled in the MO Basis for the first two energy computations. In the next two the ao_basis=disk algorithm is used, where the transformation of integrals for  four-virtual case is avoided. 
:srcsample:`fci-h2o`                            6-31G H2O Test FCI Energy Point
:srcsample:`psimrcc-pt2`                        Mk-MRPT2 single point. :math:`^1A_1` F2 state described using the Ms = 0 component of the singlet.  Uses TCSCF singlet orbitals.
:srcsample:`cc46`                               EOM-CC2/cc-pVDZ on H2O2 with two excited states in each irrep
:srcsample:`mints4`                             A demonstration of mixed Cartesian/ZMatrix geometry specification, using variables, for the benzene-hydronium complex.  Atoms can be placed using ZMatrix coordinates, whether they belong to the same fragment or not.  Note that the Cartesian specification must come before the ZMatrix entries because the former define absolute positions, while the latter are relative.
:srcsample:`fd-freq-gradient-large`             SCF DZ finite difference frequencies by energies for C4NH4
:srcsample:`dft1-alt`                           DFT Functional Test
:srcsample:`cc48`                               reproduces dipole moments in J.F. Stanton's "biorthogonal" JCP paper
:srcsample:`cc28`                               CCSD/cc-pVDZ optical rotation calculation (length gauge only) on Z-mat H2O2
:srcsample:`cc6`                                Frozen-core CCSD(T)/cc-pVDZ on C4H4N anion with disk ao algorithm
:srcsample:`plugin\_test\_matrix`               Plugin_test_matrix test input
:srcsample:`cc8`                                UHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Z-matrix input.
:srcsample:`rasci-ne`                           Ne atom RASCI/cc-pVQZ  Example of split-virtual CISD[TQ] from Sherrill and Schaefer, J. Phys. Chem. XXX This uses a "primary" virtual space 3s3p (RAS 2), a "secondary" virtual space 3d4s4p4d4f (RAS 3), and a "tertiary" virtual space consisting of the remaining virtuals.  First, an initial CISD computation is run to get the natural orbitals; this allows a meaningful partitioning of the virtual orbitals into groups of different importance.  Next, the RASCI is run.  The split-virtual CISD[TQ] takes all singles and doubles, and all triples and quadruples with no more than 2 electrons in the secondary virtual subspace (RAS 3).  If any electrons are present in the tertiary virtual subspace (RAS 4), then that excitation is only allowed if it is a single or double.
:srcsample:`cc5a`                               RHF CCSD(T) STO-3G frozen-core energy of C4NH4 Anion
:srcsample:`pywrap\_cbs1`                       Various basis set extrapolation tests
:srcsample:`mcscf3`                             RHF 6-31G** energy of water, using the MCSCF module and Z-matrix input.
:srcsample:`frac`                               Carbon/UHF Fractionally-Occupied SCF Test Case 
:srcsample:`psimrcc-sp1`                        Mk-MRCCSD single point. :math:`^3 \Sigma ^-` O2 state described using the Ms = 0 component of the triplet.  Uses ROHF triplet orbitals.
:srcsample:`fd-freq-gradient`                   STO-3G frequencies for H2O by finite-differences of gradients
:srcsample:`cc13`                               UHF-CCSD/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`cc34`                               RHF-CCSD/cc-pVDZ energy of H2O partitioned into pair energy contributions.
:srcsample:`cisd-opt-fd`                        H2O CISD/6-31G** Optimize Geometry by Energies
:srcsample:`mrcc1`                              CCSDT cc-pVDZ energy for the H2O molecule using MRCC
:srcsample:`cc49`                               EOM-CC3(UHF) on CH radical with user-specified basis and properties for particular root
:srcsample:`cc41`                               RHF-CC2-LR/cc-pVDZ optical rotation of H2O2.  gauge = both, omega = (589 355 nm)
:srcsample:`sapt1`                              SAPT0 cc-pVDZ computation of the ethene-ethyne interaction energy, using the cc-pVDZ-JKFIT RI basis for SCF and cc-pVDZ-RI for SAPT.  Monomer geometries are specified using Cartesian coordinates.
:srcsample:`cc39`                               RHF-CC2-LR/cc-pVDZ dynamic polarizabilities of HOF molecule.
:srcsample:`cisd-h2o+-2`                        6-31G** H2O+ Test CISD Energy Point
:srcsample:`mints2`                             A test of the basis specification.  A benzene atom is defined using a ZMatrix containing dummy atoms and various basis sets are assigned to different atoms.  The symmetry of the molecule is automatically lowered to account for the different basis sets.
:srcsample:`pywrap\_db1`                        Database calculation, so no molecule section in input file. Portions of the full databases, restricted by subset keyword, are computed by sapt0 and dfmp2 methods.
:srcsample:`opt2-fd`                            SCF DZ allene geometry optimzation, with Cartesian input
:srcsample:`sapt2`                              SAPT0 aug-cc-pVDZ computation of the benzene-methane interaction energy, using the aug-pVDZ-JKFIT DF basis for SCF, the aug-cc-pVDZ-RI DF basis for SAPT0 induction and dispersion, and the aug-pVDZ-JKFIT DF basis for SAPT0 electrostatics and induction. This example uses frozen core as well as asyncronous I/O while forming the DF integrals and CPHF coefficients.
:srcsample:`cc19`                               CCSD/cc-pVDZ dipole polarizability at two frequencies
:srcsample:`plugin\_libfock`                    LibFock test input
:srcsample:`cc4`                                RHF-CCSD(T) cc-pVQZ frozen-core energy of the BH molecule, with Cartesian input. After the computation, the checkpoint file is renamed, using the PSIO handler.
:srcsample:`cc10`                               ROHF-CCSD cc-pVDZ energy for the :math:`^2\Sigma^+` state of the CN radical
:srcsample:`cc8c`                               ROHF-CCSD cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the  CN radical, with Cartesian input.
:srcsample:`scf1`                               RHF cc-pVQZ energy for the BH molecule, with Cartesian input.
:srcsample:`cisd-h2o+-0`                        6-31G** H2O+ Test CISD Energy Point
:srcsample:`cc43`                               RHF-CC2-LR/STO-3G optical rotation of (S)-methyloxirane.  gauge = both, omega = (589 355 nm)
:srcsample:`cc27`                               Single point gradient of 1-1B2 state of H2O with EOM-CCSD
:srcsample:`cisd-sp-2`                          6-31G** H2O Test CISD Energy Point
:srcsample:`pywrap\_db2`                        Database calculation with psi4-generated input. Should not be used as a model input file but as a canary to avoid breaking database/input parser dependencies.
:srcsample:`opt1`                               SCF STO-3G geometry optimzation, with Z-matrix input
:srcsample:`dft2`                               DFT Functional Test
:srcsample:`cc15`                               RHF-B-CCD(T)/6-31G** H2O single-point energy (fzc, MO-basis :math:`\langle ab|cd \rangle`\ )
:srcsample:`dft1`                               DFT Functional Test
:srcsample:`cc18`                               RHF-CCSD-LR/cc-pVDZ static polarizability of HOF
:srcsample:`mom`                                Maximum Overlap Method (MOM) Test. MOM is designed to stabilize SCF convergence and to target excited Slater determinants directly.
:srcsample:`fci-h2o-fzcv`                       6-31G H2O Test FCI Energy Point
:srcsample:`fd-freq-energy`                     SCF STO-3G finite-difference frequencies from energies
:srcsample:`dcft5`                              DCFT-06 calculation for the O2 molecule (triplet ground state). This performs  geometry optimization using two-step and simultaneous solution of the  response equations for the analytic gradient.
:srcsample:`opt2`                               SCF DZ allene geometry optimzation, with Cartesian input
:srcsample:`scf11-freq-from-energies`           Test frequencies by finite differences of energies for planar C4NH4 TS
:srcsample:`opt5`                               6-31G** UHF CH2 3B1 optimization
:srcsample:`cc23`                               ROHF-EOM-CCSD/DZ analytic gradient lowest :math:`^{2}B_1` state of H2O+ (A1 excitation)
:srcsample:`cc26`                               Single-point gradient, analytic and via finite-differences of 2-1A1 state of H2O with EOM-CCSD
:srcsample:`fci-tdm`                            He2+ FCI/cc-pVDZ Transition Dipole Moment
:srcsample:`rasci-c2-active`                    6-31G* C2 Test RASCI Energy Point, testing two different ways of specifying the active space, either with the ACTIVE keyword, or with RAS1, RAS2, RESTRICTED_DOCC, and RESTRICTED_UOCC
:srcsample:`docs\_dft`                          This test is used to construct the documentation; it is not suitable for emulation by users.
:srcsample:`tu2-ch2-energy`                     Sample UHF/6-31G** CH2 computation
:srcsample:`cc16`                               UHF-B-CCD(T)/cc-pVDZ :math:`^{3}B_1` CH2 single-point energy (fzc, MO-basis :math:`\langle ab|cd \rangle` )
:srcsample:`sapt4`                              SAPT2+(3) aug-cc-pVDZ computation of the formamide dimer interaction energy, using the aug-cc-pVDZ-JKFIT DF basis for SCF and aug-cc-pVDZ-RI  for SAPT. This example uses frozen core as well as MP2 natural orbital  approximations.
:srcsample:`cc47`                               EOM-CCSD/cc-pVDZ on H2O2 with two excited states in each irrep
:srcsample:`scf3`                               are specified explicitly.
:srcsample:`cc52`                               CCSD Response for H2O2
:srcsample:`cc50`                               EOM-CC3(ROHF) on CH radical with user-specified basis and properties for particular root
:srcsample:`cc12`                               Single point energies of multiple excited states with EOM-CCSD
:srcsample:`cisd-sp`                            6-31G** H2O Test CISD Energy Point
:srcsample:`mrcc4`                              CCSDT cc-pVDZ optimization and frequencies for the H2O molecule using MRCC
:srcsample:`props1`                             RHF STO-3G dipole moment computation, performed by applying a finite electric field and numerical differentiation.
:srcsample:`cc42`                               RHF-CC2-LR/STO-3G optical rotation of (S)-methyloxirane.  gauge = length, omega = (589 355 nm)
:srcsample:`fci-dipole`                         6-31G H2O Test FCI Energy Point
:srcsample:`docs\_psimod`                       This test is used to construct the documentation; it is not suitable for emulation by users.
:srcsample:`tu4-h2o-freq`                       Frequencies for H2O HF/cc-pVDZ at optimized geometry
:srcsample:`dfmp2\_1`                           Density fitted MP2 cc-PVDZ/cc-pVDZ-RI computation of formic acid dimer binding energy using automatic counterpoise correction.  Monomers are specified using Cartesian coordinates.
:srcsample:`dcft3`                              DCFT-06 calculation for the He dimer. This performs a simultaneous update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the AO Basis, using integrals stored on disk.
:srcsample:`cc4a`                               RHF-CCSD(T) cc-pVQZ frozen-core energy of the BH molecule, with Cartesian input. This version tests the FROZEN_DOCC option explicitly
:srcsample:`cisd-h2o+-1`                        6-31G** H2O+ Test CISD Energy Point
:srcsample:`cc8b`                               ROHF-CCSD cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the  CN radical, with Cartesian input.
:srcsample:`mints3`                             Test individual integral objects for correctness.
:srcsample:`cc2`                                6-31G** H2O CCSD optimization by energies, with Z-Matrix input
:srcsample:`cc45`                               RHF-EOM-CC2/cc-pVDZ lowest two states of each symmetry of H2O.
:srcsample:`fci-tdm-2`                          BH-H2+ FCI/cc-pVDZ Transition Dipole Moment
:srcsample:`psimrcc-ccsd\_t-2`                  Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`sad1`                               Test of the superposition of atomic densities (SAD) guess, using a highly distorted water geometry with a cc-pVDZ basis set.  This is just a test of the code and the user need only specify guess=sad to the SCF module's (or global) options in order to use a SAD guess. The test is first performed in C2v symmetry, and then in C1.
:srcsample:`rasci-h2o`                          RASCI/6-31G** H2O Energy Point
:srcsample:`cc17`                               Single point energies of multiple excited states with EOM-CCSD
:srcsample:`tu3-h2o-opt`                        Optimize H2O HF/cc-pVDZ
:srcsample:`mrcc2`                              CCSDT(Q) cc-pVDZ energy for the H2O molecule using MRCC. This example builds up from CCSD. First CCSD, then CCSDT, finally CCSDT(Q).
:srcsample:`cc21`                               ROHF-EOM-CCSD/DZ analytic gradient lowest :math:`^{2}A_1` excited state of H2O+ (B1 excitation)
:srcsample:`opt4`                               SCF cc-pVTZ geometry optimzation, with Z-matrix input
:srcsample:`cc13a`                              UHF-CCSD(T)/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`mpn-bh`                             MP(n)/aug-cc-pVDZ BH Energy Point, with n=2-19.  Compare against  M. L. Leininger et al., J. Chem. Phys. 112, 9213 (2000)
:srcsample:`cc38`                               RHF-CC2-LR/cc-pVDZ static polarizabilities of HOF molecule.
:srcsample:`mrcc3`                              CCSD(T) cc-pVDZ geometry optimization for the H2O molecule using MRCC.
:srcsample:`pywrap\_alias`                      Test parsed and exotic calls to energy() like zapt4, mp2.5, and cisd are working
:srcsample:`opt3`                               SCF cc-pVDZ geometry optimzation, with Z-matrix input
:srcsample:`cc3`                                cc3: RHF-CCSD/6-31G** H2O geometry optimization and vibrational frequency analysis by finite-differences of gradients
:srcsample:`scf-bz2`                            Benzene Dimer Out-of-Core HF/cc-pVDZ
:srcsample:`cc51`                               EOM-CC3/cc-pVTZ on H2O
:srcsample:`fci-h2o-2`                          6-31G H2O Test FCI Energy Point
:srcsample:`cc31`                               CCSD/sto-3g optical rotation calculation (both gauges) at two frequencies on methyloxirane
:srcsample:`psimrcc-ccsd\_t-1`                  Mk-MRCCSD(T) single point. :math:`^1A_1` CH2 state described using the Ms = 0 component of the singlet.  Uses RHF singlet orbitals.
:srcsample:`cc11`                               Frozen-core CCSD(ROHF)/cc-pVDZ on CN radical with disk-based AO algorithm
:srcsample:`fd-freq-energy-large`               SCF DZ finite difference frequencies by energies for C4NH4
:srcsample:`cc33`                               CC3(UHF)/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`tu6-cp-ne2`                         Example potential energy surface scan and CP-correction for Ne2
:srcsample:`pywrap\_all`                        Intercalls among python wrappers- database, cbs, optimize, energy, etc. Though each call below functions individually, running them all in sequence or mixing up the sequence is aspirational at present. Also aspirational is using the intended types of gradients.
:srcsample:`cc30`                               CCSD/sto-3g optical rotation calculation (length gauge only) at two frequencies on methyloxirane
:srcsample:`sapt3`                              SAPT2+3 aug-cc-pVDZ computation of the water dimer interaction energy,  using the aug-cc-pVDZ-JKFIT DF basis for SCF and aug-cc-pVDZ-RI for SAPT.
:srcsample:`scf5`                               Test of all different algorithms and reference types for SCF, on singlet and triplet O2, using the cc-pVTZ basis set.
:srcsample:`cc8a`                               ROHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Cartesian input.
:srcsample:`opt1-fd`                            SCF STO-3G geometry optimzation, with Z-matrix input, by finite-differences
:srcsample:`castup1`                            Test of SAD/Cast-up (mainly not dying due to file weirdness)
:srcsample:`adc1`                               ADC/6-31G** on H2O
:srcsample:`cc9`                                UHF-CCSD(T) cc-pVDZ frozen-core energy for the :math:`^2\Sigma^+` state of the CN radical, with Z-matrix input.
:srcsample:`pubchem1`                           Benzene vertical singlet-triplet energy difference computation, using the PubChem database to obtain the initial geometry, at the UHF an ROHF levels of theory.
:srcsample:`cc44`                               Test case for some of the PSI4 out-of-core codes.  The code is given only 2.0 MB of memory, which is insufficient to hold either the A1 or B2 blocks of an ovvv quantity in-core, but is sufficient to hold at least two copies of an oovv quantity in-core.
:srcsample:`cc35`                               CC3(ROHF)/cc-pVDZ H2O :math:`R_e` geom from Olsen et al., JCP 104, 8007 (1996)
:srcsample:`cc9a`                               ROHF-CCSD(T) cc-pVDZ energy for the :math:`^2\Sigma^+` state of the CN radical,  with Z-matrix input.
:srcsample:`cc1`                                RHF-CCSD 6-31G** all-electron optimization of the H2O molecule
:srcsample:`scf4`                               RHF cc-pVDZ energy for water, automatically scanning the symmetric stretch and bending coordinates using Python's built-in loop mechanisms.  The geometry is apecified using a Z-matrix with variables that are updated during the potential energy surface scan, and then the same procedure is performed using polar coordinates, converted to Cartesian coordinates.
:srcsample:`cisd-h2o-clpse`                     6-31G** H2O Test CISD Energy Point with subspace collapse
:srcsample:`dfmp2\_2`                           Density fitted MP2 energy of H2, using density fitted reference and automatic looping over cc-pVDZ and cc-pVTZ basis sets. Results are tabulated using the built in table functions by using the default options and by specifiying the format.
:srcsample:`cc24`                               Single point gradient of 1-2B1 state of H2O+ with EOM-CCSD
:srcsample:`cc14`                               ROHF-CCSD/cc-pVDZ :math:`^{3}B_1` CH2 geometry optimization via analytic gradients
:srcsample:`cc29`                               CCSD/cc-pVDZ optical rotation calculation (both gauges) on Cartesian H2O2
:srcsample:`dfscf-bz2`                          Benzene Dimer DF-HF/cc-pVDZ
:srcsample:`matrix1`                            An example of using BLAS and LAPACK calls directly from the Psi input file, demonstrating matrix multiplication, eigendecomposition, Cholesky decomposition and LU decomposition. These operations are performed on vectors and matrices provided from the Psi library.
:srcsample:`cc36`                               CC2(RHF)/cc-pVDZ energy of H2O.
:srcsample:`mp2\_1`                             All-electron MP2 6-31G** geometry optimization of water
:srcsample:`cc37`                               CC2(UHF)/cc-pVDZ energy of H2O+.
:srcsample:`psimrcc-ccsd\_t-4`                  Mk-MRCCSD(T) single point. :math:`^1A_1` O$_3` state described using the Ms = 0 component of the singlet.  Uses TCSCF orbitals.
:srcsample:`zaptn-nh2`                          ZAPT(n)/6-31G NH2 Energy Point, with n=2-25
:srcsample:`cc5`                                RHF CCSD(T) aug-cc-pvtz frozen-core energy of C4NH4 Anion
:srcsample:`mints1`                             Symmetry tests for a range of molecules.  This doesn't actually compute any energies, but serves as an example of the many ways to specify geometries in Psi4.
:srcsample:`props2`                             DF-SCF cc-pVDZ of benzene-hydronium ion, scanning the dissociation coordinate with Python's built-in loop mechanism. The geometry is specified by a Z-matrix with dummy atoms, fixed parameters, updated parameters, and separate charge/multiplicity specifiers for each monomer. One-electron properties computed for dimer and one monomer.
:srcsample:`tu5-sapt`                           Example SAPT computation for ethene*ethine (i.e., ethylene*acetylene), test case 16 from the S22 database
:srcsample:`dcft1`                              DCFT-06 calculation for the He dimer. This performs a simultaneous update of the orbitals and cumulant, using DIIS extrapolation. Four-virtual integrals are handled in the MO Basis.
=============================================   ============

